sinclude(./aclocal.m4)dnl Autoconf lossage
GLIBC_PROVIDES dnl See aclocal.m4 in the top level source directory.
# Local configure fragment for sysdeps/ieee754/ldbl-opt/.

AC_CACHE_CHECK(whether $CC $CFLAGS supports -mlong-double-128,
	       libc_cv_mlong_double_128, [dnl
if $CC $CFLAGS -mlong-double-128 -S -xc /dev/null -o /dev/null 2>&1
then
  libc_cv_mlong_double_128=yes
else
  libc_cv_mlong_double_128=no
fi])
if test "$libc_cv_mlong_double_128" = no; then
  AC_MSG_ERROR([this configuration requires -mlong-double-128 support])
fi
